Revert code style to java 8